index.css
body {
  padding: 0;
  margin: 0;
  /* Credit to Rehan for the bitchin' font <3 */
  /* sorry Rehan */
  color: white;
  background: #2c2f33;
  font-size: 14px;
  font-family: Inter, sans-serif;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.bg-dark {
  background: #23272a !important;
}

.open-eatery,
.closed-eatery {
  display: inline-block;
  border-radius: 50%;
  width: 50%;
  background-color: #eee;
  height: 11px;
  width: 11px;
  margin-right: 0.5rem;
}

.open-eatery {
  background-color: #19b875;
  animation-name: blinking;
  animation-duration: 1s;
  animation-iteration-count: infinite;
}

.badge-accent {
  color: #105c03;
  background: #19b875;
}

.closed-eatery {
  background-color: #dd3c18;
}

.open {
  color: #19b875;
  opacity: 0.9;
}

.closed {
  color: #dd3c18;
}

@keyframes blinking {
  0% {
    opacity: 0;
  }

  49% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  75% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.content-container {
  padding-top: 6vh;
}

.psa {
  font-size: 2.8em;
  font-weight: 800;
  font-family: Zilla Slab, sans-serif;
}

.font-serif {
  font-family: Zilla Slab, sans-serif;
}

.announcement {
  background: #23272a;
}

.border-bottom-custom {
  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
}

.logo-type {
  font-weight: bold;
  font-size: 1.8em;
  font-weight: 800;
  font-family: Zilla Slab;
  color: #dd3c18 !important;
}

.card {
  margin: 0 auto;
  background: #23272a;
  margin-bottom: 1rem !important;
  border: 2px solid rgba(0, 0, 0, 0.2);
  min-height: 200px;
  padding: 0;
}

.card-header {
  font-weight: 500;
  background-color: #1C1F21;
}

.card-title {
  padding: 0;
  font-family: Zilla Slab, sans-serif;
  text-transform: capitalize;
}

.card-card, .menu-text{
  display: inline;
}

.menu-text {
  text-decoration: underline;
  color: white;
  transition: 0.1s;
}

.menu-text:hover, .menu-text:active {
  color: gray;
  text-decoration: none;
}

.tagline {
  font-size: 1em;
}

@media (max-width: 575.98px) {
  .psa h1 {
    font-size: 0.8em;
    padding-bottom: 1em;
  }

  .card {
    min-height: 1px;
  }

  .card-header {
    padding: 0.5rem 1rem;
  }

  .card-body {
    padding: 0.75rem 1rem;
  }
}

@media (min-width: 576px) {
  .card-columns {
    column-count: 2;
  }
}

@media (min-width: 768px) {
  .card-columns {
    column-count: 2;
  }
}

@media (min-width: 992px) {
  .card-columns {
    column-count: 3;
  }
}

@media (min-width: 1600px) {
  .card-columns {
    column-count: 4;
  }
}

@media (max-width: 767px) {
  .desktop-only {
    display: none;
  }
}

@media (min-width: 768px) {
  .mobile-only {
    display: none;
  }
}

